Fix font size on mobile

--- a/notes.css
+++ b/notes.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 1000px){
   body {
-    font-size: 32px;
+    font-size: 48px;
   }
 }
 
